--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ __pycache__/data_utils.cpython-312.pyc
 __pycache__/plot_utils.cpython-312.pyc
 __pycache__/stock_utils.cpython-312.pyc
 user_data.json
+__pycache__/
